[gd_scene load_steps=23 format=3 uid="uid://c613c11xmyeom"]

[ext_resource type="Shader" uid="uid://cy3h76ldjx2s2" path="res://retro_pp_dragon1freak.gdshader" id="1_bslm6"]
[ext_resource type="PackedScene" uid="uid://bwnoxsr8gim04" path="res://hud/text_entry_a.tscn" id="3_i27hn"]
[ext_resource type="Texture2D" uid="uid://dn274wwl1ah1e" path="res://menus/lightson_UI-pipes.png" id="3_xk0nw"]
[ext_resource type="Script" uid="uid://dc5hlrdjqonvd" path="res://hud/text_entry_main_menu.gd" id="3_yasnv"]
[ext_resource type="PackedScene" uid="uid://dxltkojknhk4h" path="res://menus/main_menu_render_1.tscn" id="4_yasnv"]
[ext_resource type="Texture2D" uid="uid://4vdsjmrqkxt" path="res://resources/misc_textures/eyes_close_1.png" id="5_bc6ko"]
[ext_resource type="Texture2D" uid="uid://bc1g5upc7xpbo" path="res://menus/2rete.PNG" id="5_le5nb"]
[ext_resource type="Texture2D" uid="uid://d3v0d1vj80ogk" path="res://menus/continue.png" id="8_rm4ws"]
[ext_resource type="PackedScene" uid="uid://c67wca2xk8ph2" path="res://menus/options_pause_menu.tscn" id="9_2r5i8"]
[ext_resource type="Texture2D" uid="uid://mh82u578v410" path="res://menus/quit.png" id="9_rm4ws"]

[sub_resource type="Gradient" id="Gradient_rm4ws"]
offsets = PackedFloat32Array(0, 0.425982, 1)
colors = PackedColorArray(0.528182, 0.379778, 9.62615e-08, 1, 0.445511, 0.510518, 4.20816e-09, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2r5i8"]
gradient = SubResource("Gradient_rm4ws")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plq2y"]
shader = ExtResource("1_bslm6")
shader_parameter/change_color_depth = true
shader_parameter/target_color_depth = 3
shader_parameter/dithering = true
shader_parameter/scale_resolution = true
shader_parameter/target_resolution_scale = 3
shader_parameter/enable_recolor = false
shader_parameter/to_gradient = SubResource("GradientTexture1D_2r5i8")

[sub_resource type="AtlasTexture" id="AtlasTexture_xrpvw"]
atlas = ExtResource("5_bc6ko")
region = Rect2(0, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh2n1"]
atlas = ExtResource("5_bc6ko")
region = Rect2(596, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcx5p"]
atlas = ExtResource("5_bc6ko")
region = Rect2(1192, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4sah"]
atlas = ExtResource("5_bc6ko")
region = Rect2(1788, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs2w5"]
atlas = ExtResource("5_bc6ko")
region = Rect2(2384, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_4va31"]
atlas = ExtResource("5_bc6ko")
region = Rect2(2980, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtl84"]
atlas = ExtResource("5_bc6ko")
region = Rect2(3576, 0, 596, 336)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiqfg"]
atlas = ExtResource("5_bc6ko")
region = Rect2(4172, 0, 596, 336)

[sub_resource type="SpriteFrames" id="SpriteFrames_le5nb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrpvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh2n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcx5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4sah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs2w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4va31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtl84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiqfg")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Node3D" type="Node3D"]

[node name="Container" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_plq2y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
stretch = true

[node name="SubViewport" type="SubViewport" parent="Container"]
handle_input_locally = false
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="MainMenuRender1" parent="Container/SubViewport" instance=ExtResource("4_yasnv")]

[node name="Control" type="Control" parent="Container"]
layout_mode = 2

[node name="Control" type="Control" parent="Container/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Container/Control/Control"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.541176, 0.239216, 1, 1)

[node name="TextureRect" type="TextureRect" parent="Container/Control/Control"]
layout_mode = 0
offset_left = 103.0
offset_top = -32.0
offset_right = 710.0
offset_bottom = 655.0
texture = ExtResource("3_xk0nw")
expand_mode = 1

[node name="LightsonUi-pipes" type="Sprite2D" parent="Container/Control/Control"]
visible = false
position = Vector2(386, 323.5)
scale = Vector2(0.666789, 0.622656)
texture = ExtResource("3_xk0nw")

[node name="Sprite2D" type="Sprite2D" parent="Container/Control/Control/LightsonUi-pipes"]

[node name="LightsonUi-pipes2" type="Sprite2D" parent="Container/Control/Control"]
position = Vector2(-5, 81)
scale = Vector2(0.184259, 0.163281)
texture = ExtResource("3_xk0nw")

[node name="Sprite2D" type="Sprite2D" parent="Container/Control/Control/LightsonUi-pipes2"]

[node name="LightsonUi-pipes3" type="Sprite2D" parent="Container/Control/Control"]
position = Vector2(341.545, 99.1737)
rotation = 3.14159
scale = Vector2(0.152857, 0.158109)
texture = ExtResource("3_xk0nw")

[node name="Sprite2D" type="Sprite2D" parent="Container/Control/Control/LightsonUi-pipes3"]

[node name="MistSpirit2" type="Sprite2D" parent="Container/Control/Control"]
position = Vector2(467, 317)
scale = Vector2(0.666, 0.625)
texture = ExtResource("8_rm4ws")

[node name="MistSpirit3" type="Sprite2D" parent="Container/Control/Control"]
position = Vector2(460, 299)
scale = Vector2(0.656, 0.656)
texture = ExtResource("9_rm4ws")

[node name="Start" type="Button" parent="Container/Control/Control"]
layout_mode = 1
anchors_preset = -1
offset_left = 79.0
offset_top = 1.0
offset_right = 434.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
toggle_mode = true
button_pressed = true
action_mode = 0
text = "START"
icon = ExtResource("5_le5nb")
flat = true
clip_text = true

[node name="TextEntryA" parent="Container/Control/Control" instance=ExtResource("3_i27hn")]
layout_mode = 1
offset_left = -210.0
offset_top = -98.0
offset_right = -210.0
offset_bottom = -98.0
script = ExtResource("3_yasnv")

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Control/Control/TextEntryA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = -48.0
offset_right = 80.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.650196, 0.620829)

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Control/Control/TextEntryA/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Options" type="Button" parent="Container/Control/Control/TextEntryA/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
toggle_mode = true
button_pressed = true
action_mode = 0
text = "Options"
flat = true
clip_text = true

[node name="Quit" type="Button" parent="Container/Control/Control/TextEntryA/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
toggle_mode = true
button_pressed = true
action_mode = 0
text = "QUIT"
flat = true
clip_text = true

[node name="options_pause_menu" parent="Container/Control/Control" instance=ExtResource("9_2r5i8")]
visible = false
layout_mode = 1
offset_top = 3.05176e-05
offset_bottom = 3.05176e-05

[node name="blink_sprite" type="AnimatedSprite2D" parent="Container/Control/Control"]
visible = false
position = Vector2(643, 362)
scale = Vector2(2.1745, 2.17857)
sprite_frames = SubResource("SpriteFrames_le5nb")

[connection signal="pressed" from="Container/Control/Control/Start" to="Container/Control/Control/TextEntryA" method="_on_start_pressed"]
[connection signal="pressed" from="Container/Control/Control/TextEntryA/HBoxContainer/VBoxContainer/Options" to="Container/Control/Control/TextEntryA" method="_on_options_pressed"]
[connection signal="pressed" from="Container/Control/Control/TextEntryA/HBoxContainer/VBoxContainer/Quit" to="Container/Control/Control/TextEntryA" method="_on_quit_pressed"]
[connection signal="exit_options_menu" from="Container/Control/Control/options_pause_menu" to="Container/Control/Control/TextEntryA" method="_on_options_pause_menu_exit_options_menu"]
